# Sobek-RE_convertor

./: README.md  pyproject.toml
src/sre_convertor/: __init__.py  api.py  models.py  orchestrator.py
src/sre_convertor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sre_convertor/io/fm/: dimr_writer.py  mdu_writer.py  net_writer.py
src/sre_convertor/io/sre/: network_reader.py
src/sre_convertor/plugins/: __init__.py  base.py  network.py
tests/: test_conversion_e2e.py  test_sre_network_reader.py
