[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-convertor"
version = "0.1.0"
description = "Convert Sobek-RE schematizations to Delft3D FM schematizations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Deltares" }
]
dependencies = [
  "hydrolib-core>=1.0.1",
  "xarray>=2024.1.0",
  "netCDF4>=1.6.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
